--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -30,10 +30,16 @@
         <item name="android:background">@color/color_gs</item>
     </style>
     
-    <style name="PersonalLine">
+    <style name="PersonalLine1">
         <item name="android:background">#ffcccccc</item>
         <item name="android:layout_width">1.0dip</item>
         <item name="android:layout_height">fill_parent</item>
+    </style>
+     
+    <style name="PersonalLine">
+        <item name="android:background">#ffcccccc</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">1.0dip</item>
     </style>
      
     <style name="PersonalCenterText">
