--- a/res/layout/fragment_shop.xml
+++ b/res/layout/fragment_shop.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" 
-    android:background="#FFFFE0">
+    android:background="#FFFFE0" 
+    >
     
 	<FrameLayout
         android:id="@+id/main_tab_banner"
