--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-        <color name="transparent">#000000</color>  
+        <color name="transparent">#00000000</color>  
         <color name="color_bg_selected">#0099cc</color>  
         <color name="color_bg_normal">#e7e7e8</color>  
         <color name="color_text_selected">#ffffff</color>  
         <color name="color_text_normal">#000000</color> 
         <color name="white">#FFFFFF</color><!--白色 --> 
         <color name="black">#000000</color> <!--黑色 -->
+        <color name="gray_bg">#fff0f0f0</color>
 </resources>
