--- a/res/layout/fragment_mine.xml
+++ b/res/layout/fragment_mine.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="left|center_vertical"
             android:text="我的"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:padding="8dip"
             android:textSize="20dip"/>
  
