--- a/res/layout/fragment_order.xml
+++ b/res/layout/fragment_order.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="left|center_vertical"
             android:text="菜单"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:padding="8dip"
             android:textSize="20dip"/>
     
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="订单"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:padding="8dip"
             android:textSize="20dip"/>
     
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right|center_vertical"
            	android:text="搜索"
-           	android:textColor="#000000"
+           	android:textColor="#ffffff"
             android:padding="8dip"
             android:textSize="20dip"/>
     </FrameLayout>
