--- a/res/layout/fragment_shop.xml
+++ b/res/layout/fragment_shop.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="left|center_vertical"
             android:text="菜单"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:padding="8dip"
             android:textSize="20dip"/>
     
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="购物车"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:padding="8dip"
             android:textSize="20dip"/>
     
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right|center_vertical"
            	android:text="搜索"
-           	android:textColor="#000000"
+           	android:textColor="#ffffff"
             android:padding="8dip"
             android:textSize="20dip"/>
     </FrameLayout>
