--- a/res/layout/fragment_order.xml
+++ b/res/layout/fragment_order.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" 
-    android:background="#FFFFE0">
+    android:background="@color/gray_bg">
     
     <FrameLayout
         android:id="@+id/main_tab_banner"
