--- a/res/layout/goods_dialog.xml
+++ b/res/layout/goods_dialog.xml
@@ -18,7 +18,7 @@
 	    <com.loopj.android.image.SmartImageView
 	        android:id="@+id/goods_siv"
 	        android:layout_width="90dp"
-	        android:layout_height="70dp"
+	        android:layout_height="90dp"
 	        android:background="#FFFFFF"
 	        android:src="@drawable/ic_launcher" />
         
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:text="商品标题"
         android:textColor="#000000"
-        android:textSize="18sp"
+        android:textSize="23sp"
         android:layout_toRightOf="@id/goods_fl_siv"
         android:paddingTop="8dp"
         android:singleLine="true"
@@ -46,6 +46,7 @@
         android:paddingTop="3dp"
         android:paddingLeft="10dp"
         android:text="商品描述：null"
+        android:textSize="15sp"
         />
 	<RelativeLayout 
         android:id="@+id/goods_relativelayout1"
@@ -58,15 +59,43 @@
         >
         <TextView 
             android:id="@+id/goods_tv_jiage" 
-	        android:layout_width="fill_parent"
+	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:text="价格"
 	        android:textColor="#ff0033"
-	        android:textSize="18sp"
+	        android:textSize="20sp"
 	        android:layout_alignParentLeft="true"
-	        />
-        
+	        />        
     </RelativeLayout>
+    <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+			android:layout_below="@id/goods_relativelayout1"
+            android:layout_alignParentRight="true"
+            android:gravity="right"
+            android:orientation="horizontal"
+            >
+
+        <Button
+            android:id="@+id/buy_sub"
+            android:layout_width="33dp"
+            android:layout_height="33dp"
+            android:text="-" />
+
+            <EditText
+                android:id="@+id/buy_goods_num"
+                android:layout_width="wrap_content"
+            	android:layout_height="wrap_content"
+            	android:text="1"
+                />
+
+            <Button
+                android:id="@+id/buy_add"
+                android:layout_width="33dp"
+                android:layout_height="33dp"
+                android:text="+" />
+
+        </LinearLayout>
     
 
 </RelativeLayout>
