--- a/res/layout/fragment_mine.xml
+++ b/res/layout/fragment_mine.xml
@@ -64,6 +64,7 @@
 		             android:layout_centerInParent="true"
 		             >				
 		             <TextView
+		                 android:id="@+id/welcome"
 		                 android:layout_width="wrap_content"
 		                 android:layout_height="wrap_content"
 		                 android:layout_gravity="center_horizontal"
