--- a/res/layout/fragment_order.xml
+++ b/res/layout/fragment_order.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left|center_vertical"
-            android:text="菜单"
+            android:text=""
             android:textColor="#ffffff"
             android:padding="8dip"
             android:textSize="20dip"/>
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|center_vertical"
-           	android:text="搜索"
+           	android:text=""
            	android:textColor="#ffffff"
             android:padding="8dip"
             android:textSize="20dip"/>
