--- a/res/layout/fragment_shop.xml
+++ b/res/layout/fragment_shop.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left|center_vertical"
-            android:text="菜单"
+            android:text=""
             android:textColor="#ffffff"
             android:padding="8dip"
             android:textSize="20dip"/>
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|center_vertical"
-           	android:text="搜索"
+           	android:text=""
            	android:textColor="#ffffff"
             android:padding="8dip"
             android:textSize="20dip"/>
