--- a/res/layout/order_item.xml
+++ b/res/layout/order_item.xml
@@ -132,6 +132,27 @@
 	        android:gravity="right"
 	        />
     </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/relativelayout6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/relativelayout5"
+        android:padding="5dp">
+	    <Button
+	        android:id="@+id/order_bt_pay"
+	        android:layout_width="80dp"
+	        android:layout_height="40dp"
+	        android:text="支付"
+	        android:layout_alignParentRight="true"
+	        />
+	    <Button
+	        android:id="@+id/order_bt_cancel"
+	        android:layout_width="80dp"
+	        android:layout_height="40dp"
+	        android:text="取消订单"
+	        android:layout_toLeftOf="@id/order_bt_pay"
+	        />
+    </RelativeLayout>
 	
 
 </RelativeLayout>
